--- a/Web-1.html
+++ b/Web-1.html
@@ -163,7 +163,7 @@
 //let age = parseInt(prompt("Введите возраст  "));
 
 // if (age >= 14 && age <= 90){
-// alert("Exzact!!!")
+// alert("Pravilino!")
 // }
 // else{
 //     alert("error")
@@ -172,7 +172,7 @@
 
 
 // if (!(age < 14 || age > 90)){
-//   alert("Exzact!!!")
+//   alert("Pravilino!")
 //  }
 // else{
 //     alert("error") 
@@ -199,12 +199,12 @@
 // } else if (userName === '' || userName === null) {
 //   alert( 'Ошибка валидации' );
 // } else {
-//   alert( "Вы кто" );
+//   alert( "Вы кто?" );
 // }
 
 //---------------------------Task #9 - user interaction--------------------------------------------
 
-// let name = prompt("Ваше имя?", "");
+// let name = prompt("Имя?", "");
 // alert(`Привет,${name}!`);
 // let isFamiliar = confirm("Вы знакомы с JavaScript?");
 //     if (isFamiliar){
